fixed background on mobile

--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -5,7 +5,21 @@
   background-position: center;
   background-repeat: no-repeat;
   padding: 10px 0;
+  background-position: top center;
+  background-size: 100vw auto;
+  -webkit-background-attachment: fixed;
+  -moz-background-attahcment: fixed;
+  -o-background-attachment: fixed;
 }
+
+@media (min-width: 768px) {
+  .projects {
+    height: 100vh;
+    background-position: center;
+    background-size: cover;
+  }
+}
+
 
 .project-container {
   display: flex;
